--- a/ios/esmapp/Info.plist
+++ b/ios/esmapp/Info.plist
@@ -36,7 +36,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -51,5 +51,22 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>PPNeueMontreal-Bold.ttf</string>
+		<string>PPNeueMontreal-BoldItalic.ttf</string>
+		<string>PPNeueMontreal-Book.ttf</string>
+		<string>PPNeueMontreal-BookItalic.ttf</string>
+		<string>PPNeueMontreal-Italic.ttf</string>
+		<string>PPNeueMontreal-Light.ttf</string>
+		<string>PPNeueMontreal-LightItalic.ttf</string>
+		<string>PPNeueMontreal-Medium.ttf</string>
+		<string>PPNeueMontreal-MediumItalic.ttf</string>
+		<string>PPNeueMontreal-Regular.ttf</string>
+		<string>PPNeueMontreal-SemiBold.ttf</string>
+		<string>PPNeueMontreal-SemiBolditalic.ttf</string>
+		<string>PPNeueMontreal-Thin.ttf</string>
+		<string>PPNeueMontreal-ThinItalic.ttf</string>
+	</array>
 </dict>
 </plist>
