--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "react-devtools": "react-devtools"
   },
   "dependencies": {
     "@legendapp/motion": "^2.2.0",
@@ -15,6 +16,7 @@
     "@react-navigation/native-stack": "^6.9.7",
     "formik": "^2.2.9",
     "react": "18.1.0",
+    "react-devtools": "^4.27.1",
     "react-hook-form": "^7.41.3",
     "react-native": "0.70.6",
     "react-native-safe-area-context": "^4.4.1",
