--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-devtools": "^4.27.1",
     "react-hook-form": "^7.41.3",
     "react-native": "0.70.6",
+    "react-native-calendars": "^1.1293.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-svg": "^13.6.0"
