--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   },
   "dependencies": {
     "@legendapp/motion": "^2.2.0",
+    "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
-    "@shopify/react-native-skia": "^0.1.169",
-    "d3": "^7.8.0",
+    "@shopify/react-native-skia": "^0.1.171",
+    "d3": "^7.8.1",
     "formik": "^2.2.9",
+    "jsc-android": "^250230.2.1",
+    "luxon": "^3.2.1",
     "react": "18.1.0",
     "react-devtools": "^4.27.1",
     "react-hook-form": "^7.41.3",
