--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
   },
   "dependencies": {
     "@legendapp/motion": "^2.2.0",
+    "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
-    "@shopify/react-native-skia": "^0.1.169",
-    "d3": "^7.8.0",
+    "@shopify/react-native-skia": "^0.1.171",
+    "d3": "^7.8.1",
     "formik": "^2.2.9",
-    "lottie-ios": "^3.0.3",
-    "lottie-react-native": "^3.0.2",
+    "jsc-android": "^250230.2.1",
+    "luxon": "^3.2.1",
     "react": "18.1.0",
     "react-devtools": "^4.27.1",
     "react-hook-form": "^7.41.3",
     "react-native": "0.70.6",
-    "react-native-calendars": "^1.1275.0",
+    "react-native-calendars": "^1.1293.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-svg": "^13.6.0"
