--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "react-hook-form": "^7.41.3",
     "react-native": "0.70.6",
     "react-native-calendars": "^1.1293.0",
+    "react-native-dropdown-picker": "^5.4.4",
+    "react-native-dropdown-select-list": "^2.0.4",
+    "react-native-dynamic-search-bar": "^2.0.2",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
