--- a/package.json
+++ b/package.json
@@ -11,25 +11,25 @@
     "react-devtools": "react-devtools"
   },
   "dependencies": {
-    "@legendapp/motion": "^2.2.0",
+    "@gorhom/bottom-sheet": "^4.4.5",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
-    "@shopify/react-native-skia": "^0.1.171",
-    "d3": "^7.8.1",
     "formik": "^2.2.9",
     "jsc-android": "^250230.2.1",
     "luxon": "^3.2.1",
     "react": "18.1.0",
-    "react-devtools": "^4.27.1",
     "react-hook-form": "^7.41.3",
     "react-native": "0.70.6",
     "react-native-calendars": "^1.1293.0",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-dynamic-search-bar": "^2.0.2",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-radio-buttons-group": "^2.3.0",
+    "react-native-reanimated": "^2.14.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-svg": "^13.6.0"
