--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-hook-form": "^7.42.1",
     "react-native": "0.71.0",
+    "react-native-calendars": "^1.1293.0",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-dynamic-search-bar": "^2.0.2",
     "react-native-gesture-handler": "^2.9.0",
