--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
-    "formik": "^2.2.9",
+    "apisauce": "^2.1.6",
+    "axios": "^1.2.3",
     "jsc-android": "^250230.2.1",
     "luxon": "^3.2.1",
     "react": "18.1.0",
