--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-reanimated": "^2.14.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-scroll-bottom-sheet": "^0.7.0",
     "react-native-svg": "^13.6.0"
   },
   "devDependencies": {
